# stra2cal_old

./: .filefocus.json  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  start_app.sh
.github/workflows/: docs.yml
notebooks/: authenticate.ipynb  main.ipynb
stra2cal/: __init__.py  app.py  authenticator.py  datamanager.py
stra2cal/utils/: logger.py
stra2ical/: app.py  authenticator.py  datamanager.py
stra2ical/utils/: config.py  logger.py
tests/: __init__.py  test_stra2ical.py
