[tool.poetry]
name = "stra2ical"
version = "0.1.0"
description = ""
authors = ["Thomas Camminady <0milieux_member@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.31.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
numpy = "^1.26.0"
icalendar = "^5.0.10"
polars = "^0.19.5"
rich = "^13.5.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.7.0"
ruff = ">=0.0.278"
pre-commit = "^3.3.3"
ipykernel = "^6.24.0"
pytest-cov = "^4.1.0"
regex = "^2023.6.3"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
  "D100",
  "D101",
  "D103",
  "D104",
  "D401",
  "E501",
]
line-length = 80
select = [
    "B",
    "B9",
    "C",
    "D",
    "E",
    "F",
    "N",
    "S",
    "W",
    "I001",
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.extend-per-file-ignores]
"stra2ical/__init__.py" = ["D400","D200"]
